// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsPage visual regression > matches the settings snapshot in dark theme 1`] = `
<div>
  <div
    class="xjp7ctv x1tgivj0 x9ynric xntwwlm"
    data-astryx-theme="neutral"
    data-theme="dark"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthMd css-1o116p1-MuiContainer-root"
      data-testid="settings-page"
    >
      <h1
        class="MuiTypography-root MuiTypography-h1 css-7x76c0-MuiTypography-root"
      >
        Settings
      </h1>
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-rl0l3k-MuiStack-root"
        >
          <div>
            <h2
              class="MuiTypography-root MuiTypography-subtitle1 css-xjmtpv-MuiTypography-root"
            >
              Default sort
            </h2>
            <p
              class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
            >
              How albums are ordered in the collection view.
            </p>
          </div>
          <div
            class="MuiStack-root css-kdc3n8-MuiStack-root"
          >
            <div
              class="MuiFormControl-root MuiTextField-root css-1ovfe1o-MuiFormControl-root-MuiTextField-root"
            >
              <div
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-hvjq6j-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="true"
                id="sort-by-label"
              >
                Sort by
              </div>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall MuiSelect-root css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="sort-by-label"
                  class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-trm6af-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                  id="sort-by"
                  role="combobox"
                  tabindex="0"
                >
                  Album Artist
                </div>
                <input
                  aria-hidden="true"
                  aria-invalid="false"
                  class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                  id="<reactid>"
                  tabindex="-1"
                  value="albumArtist"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon css-1rfqz7c-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
                  data-testid="ArrowDropDownIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-ex8a5f-MuiNotchedOutlined-root"
                  >
                    <span>
                      Sort by
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <button
              aria-label="Sort ascending"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1hek1d0-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="ArrowUpwardIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m4 12 1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8z"
                />
              </svg>
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth MuiDivider-flexItem css-lhgpb-MuiDivider-root"
        />
        <div
          class="MuiStack-root css-rl0l3k-MuiStack-root"
        >
          <div>
            <h2
              class="MuiTypography-root MuiTypography-subtitle1 css-xjmtpv-MuiTypography-root"
            >
              Language
            </h2>
            <p
              class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
            >
              Interface language.
            </p>
          </div>
          <div
            aria-label="Select language"
            class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-1ykf7ei-MuiToggleButtonGroup-root"
            role="group"
          >
            <button
              aria-label="English"
              aria-pressed="true"
              class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-firstButton css-6lp71c-MuiButtonBase-root-MuiToggleButton-root"
              tabindex="0"
              type="button"
              value="en"
            >
              EN
            </button>
            <button
              aria-label="Deutsch"
              aria-pressed="false"
              class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-lastButton css-6lp71c-MuiButtonBase-root-MuiToggleButton-root"
              tabindex="0"
              type="button"
              value="de"
            >
              DE
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth MuiDivider-flexItem css-lhgpb-MuiDivider-root"
        />
        <div
          class="MuiStack-root css-rl0l3k-MuiStack-root"
        >
          <div>
            <h2
              class="MuiTypography-root MuiTypography-subtitle1 css-xjmtpv-MuiTypography-root"
            >
              Theme
            </h2>
            <p
              class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
            >
              Switch between light and dark appearance.
            </p>
          </div>
          <button
            aria-describedby="<reactid>"
            aria-label="Switch to light theme"
            class="astryx-button ghost md x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x1ueg155 xjbqb8w x1tgivj0 x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x1v15ycx xioom0i xnjsko4 xt970qd x3oybdh xk4oym4"
            data-astryx-edge-comp=""
            data-size="md"
            data-variant="ghost"
            style="anchor-name: --astryx-layer-<reactid>;"
            type="button"
          >
            <span
              class="xjp7ctv"
            >
              <span
                class="x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1kky2od xlup9mm x1j61zf2"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sun astryx-icon md inherit x2lah0s x1heor9g xw4jnvo x1qx5ct2"
                  data-color="inherit"
                  data-size="md"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="4"
                  />
                  <path
                    d="M12 2v2"
                  />
                  <path
                    d="M12 20v2"
                  />
                  <path
                    d="m4.93 4.93 1.41 1.41"
                  />
                  <path
                    d="m17.66 17.66 1.41 1.41"
                  />
                  <path
                    d="M2 12h2"
                  />
                  <path
                    d="M20 12h2"
                  />
                  <path
                    d="m6.34 17.66-1.41 1.41"
                  />
                  <path
                    d="m19.07 4.93-1.41 1.41"
                  />
                </svg>
              </span>
            </span>
            <span
              aria-live="polite"
              class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
              role="status"
            />
          </button>
          <div
            class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
            id="<reactid>"
            popover="manual"
            role="tooltip"
            style="position-anchor: --astryx-layer-<reactid>; position-area: self-block-start; position-try-fallbacks: flip-block, flip-inline, flip-block flip-inline;"
          >
            <div
              class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
            >
              Switch to light theme
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth MuiDivider-flexItem css-lhgpb-MuiDivider-root"
        />
        <div
          class="MuiStack-root css-zvk6s0-MuiStack-root"
          data-testid="directory-layout-settings"
        >
          <div>
            <h2
              class="MuiTypography-root MuiTypography-subtitle1 css-xjmtpv-MuiTypography-root"
            >
              Directory layout
            </h2>
            <p
              class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
            >
              The folder structure used when albums are relaid out. Configured by the operator and read-only here.
            </p>
          </div>
          <span
            class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-1q505s5-MuiSkeleton-root"
            data-testid="layout-settings-loading"
            style="height: 48px;"
          />
          <div
            class="MuiBox-root css-0"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
            >
              <div
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-disabled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined css-1kfabtt-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                id="<reactid>-label"
              >
                Preview album
              </div>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall MuiSelect-root css-1blp12k-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <div
                  aria-disabled="true"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="<reactid>-label"
                  class="MuiSelect-select MuiSelect-outlined Mui-disabled MuiInputBase-input MuiOutlinedInput-input Mui-disabled css-trm6af-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                  id="<reactid>"
                  role="combobox"
                >
                  <span
                    aria-hidden="true"
                    class="notranslate"
                  >
                    ​
                  </span>
                </div>
                <input
                  aria-hidden="true"
                  aria-invalid="false"
                  class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                  disabled=""
                  id="<reactid>"
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon Mui-disabled css-1rfqz7c-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
                  data-testid="ArrowDropDownIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-1n64csd-MuiNotchedOutlined-root"
                  >
                    <span>
                      Preview album
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
            data-testid="layout-preview-empty"
          >
            Select an album to preview where it would be placed.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SettingsPage visual regression > matches the settings snapshot in light theme 1`] = `
<div>
  <div
    class="xjp7ctv x1tgivj0 x9ynric x19aimcq"
    data-astryx-theme="neutral"
    data-theme="light"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthMd css-1o116p1-MuiContainer-root"
      data-testid="settings-page"
    >
      <h1
        class="MuiTypography-root MuiTypography-h1 css-7x76c0-MuiTypography-root"
      >
        Settings
      </h1>
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-rl0l3k-MuiStack-root"
        >
          <div>
            <h2
              class="MuiTypography-root MuiTypography-subtitle1 css-xjmtpv-MuiTypography-root"
            >
              Default sort
            </h2>
            <p
              class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
            >
              How albums are ordered in the collection view.
            </p>
          </div>
          <div
            class="MuiStack-root css-kdc3n8-MuiStack-root"
          >
            <div
              class="MuiFormControl-root MuiTextField-root css-1ovfe1o-MuiFormControl-root-MuiTextField-root"
            >
              <div
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-hvjq6j-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="true"
                id="sort-by-label"
              >
                Sort by
              </div>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall MuiSelect-root css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="sort-by-label"
                  class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-trm6af-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                  id="sort-by"
                  role="combobox"
                  tabindex="0"
                >
                  Album Artist
                </div>
                <input
                  aria-hidden="true"
                  aria-invalid="false"
                  class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                  id="<reactid>"
                  tabindex="-1"
                  value="albumArtist"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon css-1rfqz7c-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
                  data-testid="ArrowDropDownIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-ex8a5f-MuiNotchedOutlined-root"
                  >
                    <span>
                      Sort by
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <button
              aria-label="Sort ascending"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1hek1d0-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="ArrowUpwardIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m4 12 1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8z"
                />
              </svg>
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth MuiDivider-flexItem css-lhgpb-MuiDivider-root"
        />
        <div
          class="MuiStack-root css-rl0l3k-MuiStack-root"
        >
          <div>
            <h2
              class="MuiTypography-root MuiTypography-subtitle1 css-xjmtpv-MuiTypography-root"
            >
              Language
            </h2>
            <p
              class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
            >
              Interface language.
            </p>
          </div>
          <div
            aria-label="Select language"
            class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-1ykf7ei-MuiToggleButtonGroup-root"
            role="group"
          >
            <button
              aria-label="English"
              aria-pressed="true"
              class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-firstButton css-6lp71c-MuiButtonBase-root-MuiToggleButton-root"
              tabindex="0"
              type="button"
              value="en"
            >
              EN
            </button>
            <button
              aria-label="Deutsch"
              aria-pressed="false"
              class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-lastButton css-6lp71c-MuiButtonBase-root-MuiToggleButton-root"
              tabindex="0"
              type="button"
              value="de"
            >
              DE
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth MuiDivider-flexItem css-lhgpb-MuiDivider-root"
        />
        <div
          class="MuiStack-root css-rl0l3k-MuiStack-root"
        >
          <div>
            <h2
              class="MuiTypography-root MuiTypography-subtitle1 css-xjmtpv-MuiTypography-root"
            >
              Theme
            </h2>
            <p
              class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
            >
              Switch between light and dark appearance.
            </p>
          </div>
          <button
            aria-describedby="<reactid>"
            aria-label="Switch to dark theme"
            class="astryx-button ghost md x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x1ueg155 xjbqb8w x1tgivj0 x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x1v15ycx xioom0i xnjsko4 xt970qd x3oybdh xk4oym4"
            data-astryx-edge-comp=""
            data-size="md"
            data-variant="ghost"
            style="anchor-name: --astryx-layer-<reactid>;"
            type="button"
          >
            <span
              class="xjp7ctv"
            >
              <span
                class="x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1kky2od xlup9mm x1j61zf2"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-moon astryx-icon md inherit x2lah0s x1heor9g xw4jnvo x1qx5ct2"
                  data-color="inherit"
                  data-size="md"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"
                  />
                </svg>
              </span>
            </span>
            <span
              aria-live="polite"
              class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
              role="status"
            />
          </button>
          <div
            class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
            id="<reactid>"
            popover="manual"
            role="tooltip"
            style="position-anchor: --astryx-layer-<reactid>; position-area: self-block-start; position-try-fallbacks: flip-block, flip-inline, flip-block flip-inline;"
          >
            <div
              class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
            >
              Switch to dark theme
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth MuiDivider-flexItem css-lhgpb-MuiDivider-root"
        />
        <div
          class="MuiStack-root css-zvk6s0-MuiStack-root"
          data-testid="directory-layout-settings"
        >
          <div>
            <h2
              class="MuiTypography-root MuiTypography-subtitle1 css-xjmtpv-MuiTypography-root"
            >
              Directory layout
            </h2>
            <p
              class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
            >
              The folder structure used when albums are relaid out. Configured by the operator and read-only here.
            </p>
          </div>
          <span
            class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-1q505s5-MuiSkeleton-root"
            data-testid="layout-settings-loading"
            style="height: 48px;"
          />
          <div
            class="MuiBox-root css-0"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
            >
              <div
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-disabled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined css-1kfabtt-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                id="<reactid>-label"
              >
                Preview album
              </div>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall MuiSelect-root css-1blp12k-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <div
                  aria-disabled="true"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="<reactid>-label"
                  class="MuiSelect-select MuiSelect-outlined Mui-disabled MuiInputBase-input MuiOutlinedInput-input Mui-disabled css-trm6af-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                  id="<reactid>"
                  role="combobox"
                >
                  <span
                    aria-hidden="true"
                    class="notranslate"
                  >
                    ​
                  </span>
                </div>
                <input
                  aria-hidden="true"
                  aria-invalid="false"
                  class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                  disabled=""
                  id="<reactid>"
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon Mui-disabled css-1rfqz7c-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
                  data-testid="ArrowDropDownIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-1n64csd-MuiNotchedOutlined-root"
                  >
                    <span>
                      Preview album
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
            data-testid="layout-preview-empty"
          >
            Select an album to preview where it would be placed.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
